--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,19 +1,25 @@
+
 <div class="container">
+    <page-title></page-title>
     <div class="row justify-content-center">
+      
       <div class="col-3">
         <movie-list></movie-list>
       </div>
   
       <div class="col-3">
-        <p>No content here yet...</p>
+      <fav-photos></fav-photos>
       </div>
-  
+      <chores-list></chores-list>
       <div class="col-3">
-        <p>No content here yet...</p>
+          
       </div>
     </div>
+      </div>
+      <hr>
+  <div class="row justify-content-center">
+  <fav-links></fav-links> 
   </div>
   
-  <chores-list></chores-list>
   
-  <fav-photos></fav-photos>
+  
